@@ -98,6 +98,9 @@ proc test_all_threads { name kill } {
     }
 }
 
+# Record the old timeout, we need to extend it for slower tests.
+set oldtimeout $timeout
+
 runto_main
 gdb_test "break thread_function" "Breakpoint \[0-9\]+ at 0x\[0-9a-f\]+: file .*print-threads.c, line \[0-9\]*\\."
 gdb_test_no_output "set var slow = 0"
@@ -106,12 +109,18 @@ test_all_threads "fast" 0
 runto_main
 gdb_test "break thread_function" "Breakpoint \[0-9\]+ at 0x\[0-9a-f\]+: file .*print-threads.c, line \[0-9\]*\\." "break thread_function (2)"
 gdb_test_no_output "set var slow = 1"
+# Extend the timeout for slower tests.
+set timeout [expr $oldtimeout + 120]
 test_all_threads "slow" 0
+set timeout $oldtimeout
 
 runto_main
 gdb_test "break thread_function" "Breakpoint \[0-9\]+ at 0x\[0-9a-f\]+: file .*print-threads.c, line \[0-9\]*\\." "break thread_function (3)"
 gdb_test_no_output "set var slow = 1" "set var slow = 1 (2)"
 gdb_breakpoint "kill"
+# Extend the timeout for slower tests.
+set timeout [expr $oldtimeout + 120]
 test_all_threads "slow with kill breakpoint" 1
+set timeout $oldtimeout
 
 return 0
